# switchbot-exporter

./: .copier-answers.yml  .dockerignore  .gitignore  AGENTS.ja.md  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  env.example  pyproject.toml  secrets.example
.github/: dependabot.yml
.github/workflows/: docker-build.yml  docker-release.yml  pr-quality-checks.yml  pr-tag-check.yml
docker/: Dockerfile.dev  Dockerfile.prod  pyproject.toml
docker/src/: app.py  config.py  switchbot.py
docker/tests/: test_app.py  test_switchbot.py
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
openspec/: AGENTS.ja.md  AGENTS.md  project.md
openspec/changes/adopt-python-decouple-config/: proposal.md  tasks.md
openspec/changes/archive/2025-11-03-adopt-python-decouple-config/specs/config-management/: spec.md
openspec/changes/archive/2025-11-03-fix-repo-guidelines-archive/: proposal.md  tasks.md
openspec/changes/archive/2025-11-03-fix-repo-guidelines-archive/specs/repo-guidelines/: spec.md
openspec/changes/archive/2025-11-03-flatten-project-root-structure/specs/repo-guidelines/: spec.md
openspec/changes/archive/2025-11-03-localize-agents-instructions/: proposal.md  tasks.md
openspec/changes/archive/2025-11-03-localize-agents-instructions/specs/repo-guidelines/: spec.md
openspec/changes/archive/2025-11-03-merge-agents-guides/: tasks.md
openspec/changes/archive/2025-11-03-merge-agents-guides/specs/repo-guidelines/: spec.md
openspec/changes/archive/2025-11-03-remove-docker-compose-workflow/: proposal.md  tasks.md
openspec/changes/archive/2025-11-03-remove-docker-compose-workflow/specs/repo-guidelines/: spec.md
openspec/changes/archive/2025-11-03-update-agent-instructions-structure/: proposal.md  tasks.md
openspec/changes/archive/2025-11-03-update-agent-instructions-structure/specs/repo-guidelines/: spec.md
openspec/changes/archive/2025-11-03-update-dev-environment-to-uv-venv/: proposal.md  tasks.md
openspec/changes/archive/2025-11-03-update-dev-environment-to-uv-venv/specs/dev-environment/: spec.md
openspec/changes/archive/2025-11-03-update-manage-dependencies-language/: proposal.md  tasks.md
openspec/changes/archive/2025-11-03-update-manage-dependencies-language/specs/manage-dependencies/: spec.md
openspec/changes/archive/2025-11-03-update-package-manager-to-uv/: tasks.md
openspec/changes/flatten-project-root-structure/: proposal.md  tasks.md
openspec/changes/merge-agents-guides/: proposal.md
openspec/changes/update-package-manager-to-uv/: proposal.md  tasks.md
openspec/changes/update-package-manager-to-uv/specs/manage-dependencies/: spec.md
openspec/specs/config-management/: spec.md
openspec/specs/dev-environment/: spec.md
openspec/specs/manage-dependencies/: spec.md
openspec/specs/repo-guidelines/: spec.md
src/: app.py  config.py  switchbot.py
stubs/: __init__.pyi
tests/: conftest.py  test_app.py  test_config.py  test_dockerfile.py  test_pr_quality_checks_workflow.py  test_pr_tag_check_workflow.py  test_switchbot.py
tests/cassettes/test_switchbot/: TestSwitchbot.test_fetch_devices.yaml  TestSwitchbot.test_fetch_metrics.yaml
