[project]
name = "switchbot-exporter"
version = "2.0.10"
description = "Prometheus SwitchBot Exporter"
authors = [
    {name = "みず", email = "mizu.copo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.1",
    "requests>=2.33.0",
    "inflect>=7.4",
    "inflection>=0.5",
    "flask>=3.1.3",
    "gunicorn>=23.0",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "pytest-recording>=0.13.4",
    "python-decouple-stubs>=0.1",
    "ruff>=0.14.10",
    "taskipy>=1.14.1",
    "types-requests>=2.32.4.20250913",
    "vcrpy>=8.2.1",
    "vulture>=2.14",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E", "W", "F",   # 基本
    "I",             # import
    "B",             # bugbear
    "SIM",           # simplify
    "C4",            # comprehension
    "ARG",           # unused args
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
python_version = "3.14"
files = ["src", "tests"]
mypy_path = "src:stubs"

[tool.taskipy.tasks]
test = "ruff check --fix src tests stubs && ruff format src tests stubs && mypy && pytest"

[tool.uv]
package = true
